[tool.poetry]
name = "websocket-study"
version = "0.1.0"
description = "A simple WebSocket example using Flask"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
Flask-SocketIO = "^5.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
